Fix header width being too wide on faq page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,3 +53,15 @@ body {
     border: none;
   }
 }
+
+.narrow-container {
+  @media (min-width: $screen-md) {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 700px !important;
+  }
+
+  @media (min-width: 920px) {
+    max-width: 900px !important;
+  }
+}
